Change depricated new Num(x) to Num.valueOf(x)